// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDisplay component should render ProdcutDisplay correctly for product with quantity 0 1`] = `
<div>
  <div
    class="productDisplay"
  >
    <div>
      <img
        class="thumbnail"
        src="http://testImage"
      />
      <div
        class="separator"
      />
      <p
        class="productDescription"
      >
        <span>
          testBrand
        </span>
         
        testDescription
      </p>
      <p
        class="price"
      >
        $
        1.000
      </p>
    </div>
    <button
      class="addButton"
    >
      Agregar
    </button>
  </div>
</div>
`;

exports[`ProductDisplay component should render ProdcutDisplay correctly for product with quantity greater than 0 1`] = `
<div>
  <div
    class="productDisplay"
  >
    <div>
      <img
        class="thumbnail"
        src="http://testImage"
      />
      <div
        class="separator"
      />
      <p
        class="productDescription"
      >
        <span>
          testBrand
        </span>
         
        testDescription
      </p>
      <p
        class="price"
      >
        $
        1.000
      </p>
    </div>
    <div
      class="addRemoveButtons"
    >
      <button
        data-testid="removeProduct"
      >
        -
      </button>
      <p>
        2
      </p>
      <button
        data-testid="addProduct"
      >
        +
      </button>
    </div>
  </div>
</div>
`;
